quorum/sts-rpc.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rpc
  namespace: quorum
  labels:
    app.kubernetes.io/name: quorum
    app.kubernetes.io/component: config
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: quorum
      app.kubernetes.io/component: rpc
  serviceName: rpc
  replicas: 2
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: quorum
      labels:
        app.kubernetes.io/name: quorum
        app.kubernetes.io/component: rpc
    spec:
      containers:
        - name: quorum
          securityContext: {}
          image: quorumengineering/quorum
          imagePullPolicy: IfNotPresent
          ports:
            - name: json-rpc
              containerPort: 8545
              protocol: TCP
            - name: ws
              containerPort: 8546
              protocol: TCP
            - name: rlpx
              containerPort: 30303
              protocol: TCP
            - name: discovery
              containerPort: 30303
              protocol: UDP
            - name: metrics
              containerPort: 6060
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8545
            initialDelaySeconds: 180
            periodSeconds: 60
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /data
            - name: quorum-config
              mountPath: /config/genesis.json
              subPath: genesis.json
            - name: quorum-config
              mountPath: /data/static-nodes.json
              subPath: static-nodes.json
            - name: quorum-secret
              mountPath: /secrets/nodekey
              subPathExpr: $(POD_NAME).nodekey
          command:
            - /bin/sh
            - -ce
          args:
            - |
              geth --datadir /data init /config/genesis.json

              geth \
              --datadir /data \
              --nodekey /secrets/nodekey \
              --nodiscover --ipcdisable \
              --nat extip:$POD_IP \
              --verbosity 5 \
              --syncmode full \
              --metrics --pprof --pprof.addr "0.0.0.0" --pprof.port 6060 \
              --networkid 1337 \
              --port 30303 \
              --http --http.addr 0.0.0.0 --http.port 8545 --http.corsdomain "*" --http.vhosts "*" --http.api "eth,net,web3" \
              --ws --ws.addr 0.0.0.0 --ws.port 8546 --ws.origins "*" --ws.api "eth,net,web3"
      volumes:
        - name: quorum-config
          configMap:
            name: quorum
        - name: quorum-secret
          secret:
            secretName: quorum
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/name: quorum
          app.kubernetes.io/component: rpc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: '1Gi'
