quorum/service-rpc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rpc
  labels:
    app.kubernetes.io/name: quorum
    app.kubernetes.io/component: rpc
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: quorum
    app.kubernetes.io/component: rpc
  ports:
    - name: json-rpc
      port: 8545
      targetPort: json-rpc
      protocol: TCP
    - name: ws
      port: 8546
      targetPort: ws
      protocol: TCP
    - name: rlpx
      port: 30303
      targetPort: rlpx
      protocol: TCP
    - name: discovery
      port: 30303
      targetPort: discovery
      protocol: UDP
    - name: metrics
      port: 9545
      targetPort: metrics
      protocol: TCP
