quorum/service-validator.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: validator
  labels:
    app.kubernetes.io/name: quorum
    app.kubernetes.io/component: validator
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: quorum
    app.kubernetes.io/component: validator
  ports:
    - name: rlpx
      port: 30303
      targetPort: rlpx
      protocol: TCP
    - name: discovery
      port: 30303
      targetPort: discovery
      protocol: UDP
    - name: metrics
      port: 9545
      targetPort: metrics
      protocol: TCP
