quorum/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quorum
  namespace: quorum
spec:
  ingressClassName: nginx
  rules:
    - host: quorum.vcap.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rpc
                port:
                  number: 8545
    - host: quorum-ws.vcap.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rpc
                port:
                  number: 8546
